<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_edit_dayword"
            android:textSize="@dimen/setting_font_size" />

        <SeekBar
            android:id="@+id/setting_edit_plan"
            android:layout_width="@dimen/setting_seek_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/setting_edit_tooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/setting_edit_tooltip"
        android:textSize="@dimen/setting_font_size" />

    <Button
        android:id="@+id/setting_edit_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:text="@string/setting_edit_complete"
        android:textSize="@dimen/tool_item_reader_title_size" />
</LinearLayout>