<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/ok_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/update_describe_one" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/update_describe_two" />
                </TableRow>

                <TableRow>

                    <ImageView
                        android:id="@+id/help_img1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/about_animation_height"
                        android:layout_weight="1.0"
                        android:src="@drawable/ic_capture_one" />

                    <ImageView
                        android:id="@+id/help_img2"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/about_animation_height"
                        android:layout_weight="1.0"
                        android:src="@drawable/ic_capture_two" />
                </TableRow>
            </TableLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardview_default_radius">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/about_toobar_size"
                    android:autofillHints="@string/update_hint"
                    android:ems="20"
                    android:hint="@string/update_hint"
                    android:inputType="textMultiLine"
                    android:id="@+id/update_feedback"
                    />
            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/update_btn"
                android:id="@+id/update_btn"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>