<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <com.oe.okenglish.view.LoginVideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_background"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@android:color/transparent"
         android:layout_marginTop="@dimen/login_card_margin_top"
         android:orientation="vertical"
         >
         <EditText
             android:id="@+id/login_user"
             android:drawableEnd="@drawable/ic_account_circle_24dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/colorAccent"
             android:textColor="@color/colorPrimary"
             android:ems="10"
             android:maxEms="10"
             android:maxLines="2"
             android:inputType="text" />

         <EditText
             android:id="@+id/login_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_visibility_off_24dp"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/colorAccent"
             android:textColor="@color/colorPrimary"
             android:ems="10"
             android:maxEms="10"
             android:maxLines="2"
             android:inputType="textPassword"
             />
           <Button
               android:id="@+id/login_logBtn"
            android:layout_width="match_parent"
             android:layout_height="wrap_content"
               android:text="@string/login_login"
               android:layout_gravity="center_horizontal"
               android:background="@android:color/transparent"
               android:textColor="@color/colorAccent"
         />
         <Button
             android:id="@+id/login_regBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_regist"
             android:layout_gravity="center_horizontal"
             android:background="@android:color/transparent"
             android:textColor="@color/colorAccent"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorAccent"
             android:text="@string/login_skip"
             android:gravity="end"
             android:id="@+id/login_skip"
             />
     </LinearLayout>
</FrameLayout>