<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/setting_unlogined_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/setting_avatar_bar_margin"
            app:cardCornerRadius="@dimen/setting_avatar_bar_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="role/marketing-agency.json"
                app:lottie_loop="false"
                app:lottie_repeatCount="@integer/lottie_anim_repeat_time"
                android:layout_weight="5.0"
                android:id="@+id/setting_lottie_view"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/setting_login_alert"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/setting_avatar_content_size"
                android:layout_weight="1.0"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/setting_logined_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/setting_avatar_bar_margin"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/setting_avatar_bar_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/setting_avatar_margin_left"
                        app:cardCornerRadius="@dimen/setting_avatar_radius"
                        app:cardMaxElevation="@dimen/setting_avatar_radius"
                        app:cardPreventCornerOverlap="true">

                        <ImageView
                            android:id="@+id/setting_avatar"
                            android:layout_width="@dimen/setting_avatar_size"
                            android:layout_height="@dimen/setting_avatar_size"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_accelerate" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/setting_avatar_title_size"
                    android:layout_weight="1.0"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/setting_avatar_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/setting_avatar_content_margin"
                        android:text="@string/setting_avatar_id"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/setting_avatar_title_size" />

                    <TextView
                        android:id="@+id/setting_avatar_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/setting_avatar_content_margin"
                        android:text="hello,world"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/setting_avatar_content_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                    <TextView
                        android:id="@+id/setting_avatar_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_edit_black_24dp"
                        android:text="@string/setting_avatar_edit"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/setting_avatar_content_size" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                android:text="@string/setting_help"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/setting_font_size" />
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_size"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/setting_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                android:text="@string/setting_update"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/setting_font_size" />
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_size"
          />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                android:text="@string/setting_about"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/setting_font_size" />
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_size"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_exam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                android:text="@string/setting_exam"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/setting_font_size" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_large"
            />
            <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="登录/注销"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/btn_radius"
                 android:textColor="@color/sel_btn_background"
                 android:id="@+id/setting_login_btn"
                 android:layout_margin="@dimen/setting_login_btn_margin"
                 />
            </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/setting_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/setting_float_button_margin_right"
        android:layout_marginBottom="@dimen/setting_float_button_margin_bottom"
        android:alpha="0.8"
        android:src="@drawable/ic_share"
        app:backgroundTint="@android:color/white"
        app:backgroundTintMode="src_in"
        app:rippleColor="@color/colorPrimary" />
</LinearLayout>
