<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/pop_window_postion_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/home_card_margin_other"
        android:layout_marginTop="@dimen/home_card_margin_other"
        android:layout_marginRight="@dimen/home_card_margin_other"
        android:layout_marginBottom="@dimen/home_card_margin_bottom"
        android:background="@android:color/white"
        app:cardCornerRadius="@dimen/home_card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_plan_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/home_plan_show_font_size">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/home_image"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/home_img_margin"
                        android:layout_weight="1.0"></ImageView>

                    <TextView
                        android:id="@+id/home_item_word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/home_item_word_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/home_item_play"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/home_item_imageBtn_margin"
                            android:layout_weight="1.0"
                            android:background="@android:color/white"></ImageButton>

                        <ImageButton
                            android:id="@+id/home_item_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/home_item_imageBtn_margin"
                            android:layout_weight="1.0"
                            android:background="@android:color/white"></ImageButton>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/home_item_show_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/home_show_btn"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/home_btn_text_size" />

                    <TextView
                        android:id="@+id/home_item_translation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="test"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/home_btn_text_size"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/home_btn_margin"
                    android:layout_weight="1.0"
                    app:cardCornerRadius="@dimen/home_btn_radius">

                    <TextView
                        android:id="@+id/home_previous_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:drawableLeft="@drawable/ic_btn_left"
                        android:text="@string/home_previous_btn"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/home_btn_text_size" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/home_btn_margin"
                    android:layout_weight="1.0"
                    app:cardCornerRadius="@dimen/home_btn_radius">

                    <TextView
                        android:id="@+id/home_next_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:drawableRight="@drawable/ic_btn_right"
                        android:text="@string/home_next_btn"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/home_btn_text_size" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_float_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/home_float_btn_margin_right"
        android:layout_marginBottom="@dimen/home_float_btn_margin_bottom"
        android:src="@drawable/ic_search_green_24dp"
        app:backgroundTint="@android:color/white"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
